Added APD option for draw and it's working!!! WV

--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.ui
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.ui
@@ -92,7 +92,7 @@
      <string>AFN-lambda</string>
     </property>
    </widget>
-   <widget class="QRadioButton" name="apdRaduiButton">
+   <widget class="QRadioButton" name="apdRadioButton">
     <property name="geometry">
      <rect>
       <x>680</x>
