Citirea din fisier si afisarea unei liste de cuvinte cu verificarea daca este acceptat sau nu

--- a/Automaton_Interface/Automaton_Interface/Automaton_Interface.ui
+++ b/Automaton_Interface/Automaton_Interface/Automaton_Interface.ui
@@ -92,6 +92,19 @@
      <string>Test Word</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="verifyWordsButton">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>140</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Verify Words</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
